load("@rules_python//python:defs.bzl", "py_library")
load("@pip_modules//:requirements.bzl", "requirement")

py_library(
    name = "aioclient",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("cachetools"),
        requirement("lru-dict"),
        requirement("tenacity"),
        "//idm/api/proto:idm_grpc_py",
        "//idm/api/proto:idm_proto_py",
    ],
)
