load("@rules_python//python:defs.bzl", "py_library")
load("@pip_modules//:requirements.bzl", "requirement")

py_library(
    name = "aioclient",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("tenacity"),
        "//idm/api/proto:grpc_py",
        "//idm/api/proto:proto_py",
        requirement("aiogrpcclient"),
    ],
)
