load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "idm_proto",
    srcs = [
        "chat_manager_service.proto",
    ],
    deps = [
        "@com_google_protobuf//:wrappers_proto",
    ],
)

py_proto_library(
    name = "idm_proto_py",
    deps = [":idm_proto"],
)

py_grpc_library(
    name = "idm_grpc_py",
    srcs = [":idm_proto"],
    deps = [":idm_proto_py"],
)
