load("@pip_modules//:requirements.bzl", "requirement")

py_library(
    name = "aioclient",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("grpcio"),
        "//idm/api/proto:proto_py",
        requirement("aiogrpcclient"),
        requirement("aiokit"),
        "//nexus/hub/proto:grpc_py",
        "//nexus/hub/proto:proto_py",
        "//nexus/models/proto:proto_py",
    ],
)
