load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = glob([
        "*.proto",
    ]),
    deps = [
        "//nexus/models/proto",
        "@com_google_protobuf//:wrappers_proto",
        "@org_izihawa_summa//summa/proto",
    ],
)

py_proto_library(
    name = "proto_py",
    deps = [":proto"],
)

py_grpc_library(
    name = "grpc_py",
    srcs = [":proto"],
    deps = [":proto_py"],
)
