load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//js:defs.bzl", "js_proto_library")

proto_library(
    name = "models_proto",
    srcs = glob([
        "*.proto",
    ]),
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "models_proto_py",
    visibility = ["//visibility:public"],
    deps = [":models_proto"],
)

js_proto_library(
    name = "models_proto_js",
    protos = [":models_proto"],
    visibility = ["//visibility:public"],
)
