load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//js:defs.bzl", "js_proto_library")

proto_library(
    name = "proto",
    srcs = glob([
        "*.proto",
    ]),
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "proto_py",
    visibility = ["//visibility:public"],
    deps = [":proto"],
)

js_proto_library(
    name = "proto_js",
    protos = [":proto"],
    visibility = ["//visibility:public"],
)
