load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pylon_proto",
    srcs = glob([
        "*.proto",
    ]),
    deps = [
        "@com_google_protobuf//:wrappers_proto",
    ],
)

py_proto_library(
    name = "pylon_proto_py",
    deps = [":pylon_proto"],
)
